# libiscsi

./: .appveyor.yml  .dir-locals.el  .gitignore  .travis.yml  CMakeLists.txt  COPYING  INSTALL  ISSUE  MEMORY_HIERARCHY  Makefile  Makefile.am  Makefile.in  README  README.md  TODO  autogen.sh  configure.ac  cscope.out  libiscsi.pc.in
.github/workflows/: build.yml  codeql.yml
aros/: Makefile.AROS  aros_compat.c  aros_compat.h  iscsi-ls.c
ci/: build.bat  build.sh  install.bat  install.sh  lio_setup.sh  run_test_tool.sh
doc/: Makefile.am  iscsi-inq.1  iscsi-inq.1.xml  iscsi-inq.xml  iscsi-ls.1  iscsi-ls.1.xml  iscsi-ls.xml  iscsi-md5sum.1  iscsi-md5sum.xml  iscsi-swp.1  iscsi-swp.1.xml  iscsi-swp.xml  iscsi-test-cu.1  iscsi-test-cu.xml
examples/: Makefile.am  iscsi-dd.c  iscsi-pthreads-inq.c  iscsi-pthreads-readloop-async.c  iscsi-pthreads-readloop.c  iscsiclient.c  ld_iscsi.c
include/: iscsi-multithreading.h  iscsi-private.h  iscsi.h  iser-private.h  md5.h  scsi-lowlevel.h  sha.h  sha3.h  slist.h  utils.h
lib/: Makefile.am  connect.c  crc32c.c  discovery.c  init.c  iscsi-command.c  iser.c  libiscsi.def  libiscsi.syms  libiscsi.syms.in  logging.c  login.c  md5.c  multithreading.c  nop.c  pdu.c  scsi-command.c  scsi-lowlevel.c  sha1.c  sha224-256.c  sha3.c  socket.c  sync.c  task_mgmt.c  utils.c
packaging/RPM/: .gitignore  libiscsi.spec.in  libiscsiclient.spec.in  makerpms.sh
patches/: README  mtx-iscsi.diff  qemu.patch  sg3_utils-1.30.patch  sg3_utils-1.32.patch
plugins/: README  roundrobin.c
src/: iscsi-inq.c  iscsi-ls.c  iscsi-readcapacity16.c  iscsi-swp.c  ld_iscsi.c
test-tool/: 0000_testunitready_simple.c  0100_read10_simple.c  0101_read10_beyond_eol.c  0102_read10_0blocks.c  0103_read10_rdprotect.c  0104_read10_flags.c  0105_read10_invalid.c  0110_readcapacity10_simple.c  0111_readcapacity10_pmi.c  0120_read6_simple.c  0121_read6_beyond_eol.c  0122_read6_invalid.c  0130_verify10_simple.c  0131_verify10_mismatch.c  0132_verify10_mismatch_no_cmp.c  0133_verify10_beyondeol.c  0143_read12_rdprotect.c  0153_read16_rdprotect.c  0160_readcapacity16_simple.c  0161_readcapacity16_alloclen.c  0170_unmap_simple.c  0171_unmap_zero.c  0180_writesame10_unmap.c  0181_writesame10_unmap_unaligned.c  0182_writesame10_beyondeol.c  0183_writesame10_wrprotect.c  0184_writesame10_0blocks.c  0190_writesame16_unmap.c  0191_writesame16_unmap_unaligned.c  0192_writesame16_beyondeol.c  0193_writesame16_wrprotect.c  0194_writesame16_0blocks.c  0200_read16_simple.c  0201_read16_rdprotect.c  0202_read16_flags.c  0203_read16_0blocks.c  0204_read16_beyondeol.c  0210_read12_simple.c  0211_read12_rdprotect.c  0212_read12_flags.c  (+349 more)
tests/: .gitignore  Makefile.am  README  config.ini  functions.sh  prog_header_digest.c  prog_noop_reply.c  prog_read_all_pdus.c  prog_readwrite_iov.c  prog_reconnect.c  prog_reconnect_timeout.c  prog_timeout.c  run-stord.sh  run-tgtd.sh  test_0100_login.sh  test_0200_discovery.sh  test_0300_nop_reply.sh  test_0400_readwrite_iow.sh  test_0410_read_all_pdus.sh  test_0500_header_digest.sh  test_0600_ipv6.sh  test_1000_chap.sh  test_1_abort.sh  test_2000_reconnect.sh  test_2001_reconnect_timeout.sh  test_2100_timeout.sh  test_9000_compareandwrite.sh  test_9001_extendedcopy.sh  test_9002_getlbatatus.sh  test_9003_inquiry.sh  test_9004_modesense6.sh  test_9005_orwrite.sh  test_9006_prefetch10.sh  test_9007_prefetch16.sh  test_9008_prinreadkeys.sh  test_9009_read6.sh  test_9010_read10.sh  test_9011_read12.sh  test_9012_read16.sh  test_9013_verify10.sh  (+22 more)
tests/utils/: 1  SetIQRAffinity.sh  StordGitBuild.py  StordGitBuildFio.py  add_aero.py  add_lun.py  add_lun.sh  add_tgt.py  add_tgt.sh  aero_stat.py  config.py  del_aero.py  flush_script.sh  flush_script_fs.sh  flush_script_patter.sh  flush_start.py  flush_status.py  hyc_delete_rec_module.lua  hyc_udf.lua  nep.py  nep_post_cleanup.py  pattern.sh  post_cleanup.py  post_cleanup.sh  rh_line_graph.py  run.sh  scan_start.py  scan_status.py  set_ckpt_bitmap.py  temp.py  test_cleanup.py  test_cleanup.sh  test_multidisk.py  test_multidisk_parallel.py  test_rpo_rto_flow.py  test_tgt.py  test_tgt.sh  test_tgt_post_cleanup.py  tgt_crash_test.py  vik
utils/: Makefile.am  iscsi-discard.c  iscsi-inq.c  iscsi-ls.c  iscsi-md5sum.c  iscsi-perf.c  iscsi-pr.c  iscsi-readcapacity16.c  iscsi-rtpg.c  iscsi-swp.c
win32/: vsbuild.bat  win32_compat.c  win32_compat.h
win32/iscsi-ls/: iscsi-ls.vcxproj  iscsi-ls.vcxproj.filters
win32/libiscsi/: libiscsi.sln  libiscsi.vcxproj  libiscsi.vcxproj.filters  version.rc
